commerce.com.tw (archived on 2004-12-06)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;shopping",
  "char_count": 4130,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.9,
  "homepage_snapshot_redirected_domain": "commerce.com.tw",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040929060932id_/http://www.commerce.com.tw/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040929060932id_/http%3A//commerce.com.tw",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "commerce.com.tw",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041206180541id_/http%3A//www.commerce.com.tw/aboutus.php%3Fst%3Dpri",
  "policy_title": "Commerce.com.tw, trade, B2B , trade lead , E-commerce , manufacturer , machine , bicycle , handtool , autoparts,",
  "policy_url": "commerce.com.tw/aboutus.php?st=pri",
  "sha1": "63439f6e550d40eeaca5d744343cbd68854e4026",
  "simhash": 79566339635218342,
  "simhash_updated": false,
  "site_hostname": "commerce.com.tw",
  "site_url": "http://commerce.com.tw",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20041206180541",
  "word_count": 666,
  "year": 2004
}

--- a/c/co/com/commerce.com.tw.html
+++ b/c/co/com/commerce.com.tw.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the commerce.com.tw privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605173445id_/http%3A//www.commerce.com.tw/aboutus.php%3Fst%3Dpri) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the commerce.com.tw privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206180541id_/http%3A//www.commerce.com.tw/aboutus.php%3Fst%3Dpri) for the most accurate reproduction.-->
 
 <html><head> 
 <title> Commerce.com.tw, trade, B2B , trade lead , E-commerce , manufacturer , machine , bicycle , handtool , autoparts, </title> 
@@ -39,13 +39,13 @@ bookmark. And trade opportunity bulletin board, representing manufacturers of pr
                 <td>  
                   <table border="0" cellspacing="0" cellpadding="0" width="100%"> 
                     <tbody><tr>  
-                      <td><a href="http://www.commerce.com.tw"><img src="http://search.commerce.com.tw/ad/ADV/logo/23.gif" width="246" height="60" border="0"></a></td> 
+                      <td><a href="http://www.commerce.com.tw"><img src="http://search.commerce.com.tw/ad/ADV/logo/12.gif" width="246" height="60" border="0" alt="go Commerce Online !"></a></td> 
                       <td> 
  
-<a href="incBanner.php?AID=1059964293" target="_blank">
-      <img src="http://search.commerce.com.tw/ad/ADV/etoe/piece4.gif" width="320" height="57" border="0"></a>
+<a href="incBanner.php?AID=1041296137" target="_blank">
+      <img src="http://search.commerce.com.tw/ad/ADV/etoe/commerce.gif" width="320" height="57" border="0"></a>
 </td> 
-                      <td align="center"><a href="http://www.commerce.com.tw/service.php"><img src="http://search.commerce.com.tw/ad/ADV/right_e/14.jpg" border="0"></a></td> 
+                      <td align="center"><a href="http://www.commerce.com.tw/ep/promote_10.6/html/en.htm"><img src="http://search.commerce.com.tw/ad/ADV/right_e/3.jpg" border="0"></a></td> 
                     </tr> 
                   </tbody></table> 
  
@@ -76,7 +76,7 @@ MM_swapImage('Image9','','pic2002/mainbtn_trad_1.gif',1)" border="0"></a></td>
 <img src="pic2002/mainbtn_biz.gif" height="22" name="Image3" onmouseout="MM_swapImgRestore()" onmouseover="MM_showHideLayers('Layer2','','show');MM_showHideLayers('Layer1','','hide');MM_showHideLayers('Layer3','','hide');
 MM_swapImage('Image3','','pic2002/mainbtn_biz_1.gif',1)" border="0"></a></td>
 
-                <td><a href="indexnew.php">
+                <td><a href="MyMailBox.php">
 <img src="pic2002/mainbtn_my.gif" height="22" name="Image1" onmouseout="MM_swapImgRestore()" onmouseover="MM_showHideLayers('Layer3','','show');MM_showHideLayers('Layer2','','hide');MM_showHideLayers('Layer1','','hide');
 MM_swapImage('Image1','','pic2002/mainbtn_my_1.gif',1)" border="0"></a></td>
                 <td><a href="changelang.php?langs=Big5"><img src="pic2002/mainbtn_bg5.gif" height="22" name="Image7" onmouseout="MM_swapImgRestore()" border="0" onmouseover="MM_showHideLayers('Layer1','','hide');MM_showHideLayers('Layer2','','hide');MM_showHideLayers('Layer3','','hide');MM_swapImage('Image7','','pic2002/mainbtn_bg5_1.gif',1)"></a></td>
@@ -93,16 +93,16 @@ MM_swapImage('Image1','','pic2002/mainbtn_my_1.gif',1)" border="0"></a></td>
             <!--<div align="center">-->
 <div id="Layer0" style="position:absolute; height:30px; z-index:1; visibility:visible"><table width="740" cellspacing="0" border="0">
            <tbody><tr height="30" bgcolor="#EEEEEE"><td width="33%" align="center" onmouseover="javascript: this.style.backgroundColor='#FFFFCC'" onmouseout="javascript: this.style.backgroundColor='#EEEEEE'">
-                 <a href="Sgn_inc.php?id=2">Make the world your market place</a></td><td width="33%" align="center" onmouseover="javascript: this.style.backgroundColor='#FFFFCC'" onmouseout="javascript: this.style.backgroundColor='#EEEEEE'">
-                 <a href="Sgn_inc.php?id=3">where comes the tradeleads?</a></td><td width="33%" align="center" onmouseover="javascript: this.style.backgroundColor='#FFFFCC'" onmouseout="javascript: this.style.backgroundColor='#EEEEEE'">
-                 <a href="Sgn_inc.php?id=4">Know you buyers more</a></td></tr></tbody></table></div>              <!--<layer id="Layer1" height="30" visibility="hide"> -->
+                 <a href="Sgn_inc.php?id=32">You need this !</a></td><td width="33%" align="center" onmouseover="javascript: this.style.backgroundColor='#FFFFCC'" onmouseout="javascript: this.style.backgroundColor='#EEEEEE'">
+                 <a href="Sgn_inc.php?id=33">24/7 Online Shop</a></td><td width="33%" align="center" onmouseover="javascript: this.style.backgroundColor='#FFFFCC'" onmouseout="javascript: this.style.backgroundColor='#EEEEEE'">
+                 <a href="Sgn_inc.php?id=34">Enquiries in very short time</a></td></tr></tbody></table></div>              <!--<layer id="Layer1" height="30" visibility="hide"> -->
        <div id="Layer1" style="position:absolute; height:30px; z-index:1; visibility:hidden">
           <table width="740" border="0" bgcolor="#FF9999" cellspacing="1" cellpadding="2" onmouseover="MM_showHideLayers('Layer1','','show')" bordercolor="#FF9999">
             <tbody><tr> 
               <td bgcolor="#FFCCCC" height="30"> 
                 <div align="center">|&nbsp;&nbsp;<font face="Arial, Helvetica, sans-serif" size="2"><a href="post.php"> 
                   Post an offer                  </a></font>&nbsp;&nbsp;|&nbsp;&nbsp;<font face="Arial, Helvetica, sans-serif" size="2"><a href="dir.php?dbT=buyposts"> 
-                  Offer to buy                  </a></font>&nbsp;&nbsp;|&nbsp;&nbsp;<font face="Arial, Helvetica, sans-serif" size="2"><a href="dir.php?dbT=sellposts"> 
+                  Offer to buy                  </a></font>&nbsp;&nbsp;|&nbsp;&nbsp;<font face="Arial, Helvetica, sans-serif" size="2"><a href="tlByTime.php?dbT=sellposts"> 
                   Offer to sell                  </a></font> &nbsp;&nbsp;|&nbsp;&nbsp;<font face="Arial, Helvetica, sans-serif" size="2"><a href="dir.php?dbT=bizposts"> 
                   Biz opportunities                  </a></font>&nbsp;&nbsp;|</div>
               </td>
@@ -135,7 +135,7 @@ MM_swapImage('Image1','','pic2002/mainbtn_my_1.gif',1)" border="0"></a></td>
         <font face="Arial, Helvetica, sans-serif" size="2"><a href="MyProfile.php">Company Profile</a></font>&nbsp;&nbsp;|&nbsp;&nbsp;
         <font face="Arial, Helvetica, sans-serif" size="2"><a href="MyFavorite.php">My Favorite</a></font>&nbsp;&nbsp;|&nbsp;&nbsp;
         <font face="Arial, Helvetica, sans-serif" size="2"><a href="ViewRecords.php">View Records</a></font>&nbsp;&nbsp;|&nbsp;&nbsp;
-        <font size="2" face="Arial, Helvetica, sans-serif"><a href="MyMailBox">My Mail Box</a></font>&nbsp;&nbsp;|</div>
+        <font size="2" face="Arial, Helvetica, sans-serif"><a href="MyMailBox.php">My Mail Box</a></font>&nbsp;&nbsp;|</div>
       </td>
     </tr>
   </tbody></table>
@@ -275,16 +275,16 @@ MM_swapImage('Image1','','pic2002/mainbtn_my_1.gif',1)" border="0"></a></td>
   </td>
   <td>
    <b>Pop Search:</b>&nbsp;
-   <a href="http://www.commerce.com.tw/PdSearch.php?Type=Pud&amp;k=sport&amp;dbT=showroom">
-   <font color="#CC0066">sport</font></a>&nbsp;&nbsp;
-   <a href="http://www.commerce.com.tw/PdSearch.php?Type=Pud&amp;k=Machinery&amp;dbT=showroom&amp;x=8&amp;y=14">
-   <font color="#CC0066">machinery</font></a>&nbsp;&nbsp;
-   <a href="http://www.commerce.com.tw/PdSearch.php?Type=Pud&amp;k=heating&amp;dbT=showroom&amp;x=17&amp;y=14">
-   <font color="#CC0066">heating</font></a>&nbsp;&nbsp;
-   <a href="http://www.commerce.com.tw/PdSearch.php?Type=Pud&amp;k=plumbing&amp;dbT=showroom">
-   <font color="#CC0066">plumbing</font></a>&nbsp;&nbsp;
-   <a href="http://www.commerce.com.tw/PdSearch.php?Type=Pud&amp;k=animal&amp;dbT=showroom">
-   <font color="#CC0066">animal</font></a>
+   <a href="http://www.commerce.com.tw/PdSearch.php?Type=Pud&amp;k=Machinery&amp;dbT=showroom&amp;x=18&amp;y=11">
+   <font color="#CC0066">Machinery</font></a>&nbsp;&nbsp;
+   <a href="http://www.commerce.com.tw/PdSearch.php?Type=Pud&amp;k=Bag&amp;dbT=showroom&amp;x=19&amp;y=5">
+   <font color="#CC0066">Bag</font></a>&nbsp;&nbsp;
+   <a href="http://www.commerce.com.tw/PdSearch.php?Type=Pud&amp;k=Computer&amp;dbT=showroom&amp;x=24&amp;y=14">
+   <font color="#CC0066">Computer</font></a>&nbsp;&nbsp;
+   <a href="http://www.commerce.com.tw/PdSearch.php?Type=Pud&amp;k=Stone&amp;dbT=showroom&amp;x=27&amp;y=9">
+   <font color="#CC0066">Stone</font></a>&nbsp;&nbsp;
+   <a href="http://www.commerce.com.tw/PdSearch.php?Type=Pud&amp;k=Tool&amp;dbT=showroom&amp;x=22&amp;y=8">
+   <font color="#CC0066">Tool</font></a>
   </td>
   <td align="right">
    <a href=""><font color="blue"></font></a>   <!--<a href='used/'><font color='blue'>Goto Used Market</font></a>-->
@@ -449,11 +449,6 @@ MM_swapImage('Image1','','pic2002/mainbtn_my_1.gif',1)" border="0"></a></td>
 </font></font> &nbsp; &nbsp; <a href="www2/"><font color="#ffffff">.</font></a>
 </div>
 
-<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0" width="0" height="0">
-  <param name="movie" value="http://www.commerce.com.tw/temp2/counter.swf">
-  <param name="quality" value="high">
-  <embed src="http://www.commerce.com.tw/temp2/counter.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" width="0" height="0"></object>
-
           </td>
         </tr>
       </tbody></table>
@@ -463,7 +458,8 @@ MM_swapImage('Image1','','pic2002/mainbtn_my_1.gif',1)" border="0"></a></td>
    
      
 <div align="center"><font size="2" face="Arial, Helvetica, sans-serif" color="#999999">Copyright© 
-        1995-2004, Taiwan Commerce Corp All rights reserved. </font></div>    
+        1995-2004, Taiwan Commerce Corp All rights reserved<a href="http://www.commerce.com.tw/manufacture/test/index_t1.php">.</a> </font></div>
+    
   
 
 </center>
