oclc.org (archived on 2004-12-06)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 5309,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 8.61,
  "homepage_snapshot_redirected_domain": "oclc.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040929115949id_/http://www.oclc.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040929115949id_/http%3A//oclc.org",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "oclc.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041206181035id_/http%3A//www.oclc.org/policies/privacy/default.htm",
  "policy_title": "OCLC Privacy policy [OCLC]",
  "policy_url": "oclc.org/policies/privacy/default.htm",
  "sha1": "24026aa612334114776d4dc2139052812f3418e4",
  "simhash": 13791828666424224668,
  "simhash_updated": false,
  "site_hostname": "oclc.org",
  "site_url": "http://oclc.org",
  "smog": 12.8,
  "strict_updated": false,
  "timestamp": "20041206181035",
  "word_count": 897,
  "year": 2004
}

--- a/o/oc/ocl/oclc.org.html
+++ b/o/oc/ocl/oclc.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the oclc.org privacy policy that was archived on 2003-12-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20031202210622id_/http%3A//oclc.org/policies/privacy/default.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the oclc.org privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206181035id_/http%3A//www.oclc.org/policies/privacy/default.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <title>
@@ -24,7 +24,7 @@ OCLC Privacy policy [OCLC]
 <meta name="DC.Date.Published" content="">
 <meta name="DC.Date.Revised" content="2003-09-11 18:10:21.273">
 <meta name="DC.Description.Audience" content="">
-<meta name="DC.Description.Edition/Version" content="13">
+<meta name="DC.Description.Version" content="13">
 <meta name="DC.Description.Summary" content="auto created">
 <meta name="DC.Language" content="">
 <meta name="DC.Publisher" content="OCLC">
@@ -37,6 +37,7 @@ OCLC Privacy policy [OCLC]
 
 <link rel="stylesheet" type="text/css" href="../../common/css/main_oclc.css">
 <link rel="stylesheet" type="text/css" media="print" href="../../common/css/print_oclc.css">
+<link rel="stylesheet" type="text/css" media="handheld" href="../../common/css/handheld_oclc.css">
 <script language="JavaScript" type="text/JavaScript">
 <!--
 function MM_preloadImages() { //v3.0
@@ -302,8 +303,8 @@ You can refuse cookies by turning them off in your browser. The OCLC web site wi
 <tbody><tr>
 <td id="footernav">
 
-<p><a href="../../global/default.htm" style="white-space: nowrap;"><img src="../../common/images/globe_footer.gif" alt=" " width="20" height="20" align="middle" style="padding-right: 3px;">OCLC Worldwide</a>&nbsp;| <a href="../../careers/default.htm" style="white-space: nowrap;">Careers at OCLC</a>&nbsp;| <a href="https://www3.oclc.org/app/contac/" target="_blank">Feedback</a>&nbsp;| <a href="default.htm" style="white-space: nowrap;">Privacy Policy</a>&nbsp;| <a href="../iso/default.htm" style="white-space: nowrap;">ISO 9001 Certificate</a><br>
-<a href="../copyright/default.htm" style="white-space: nowrap;">©2003 OCLC Online Computer Library Center</a></p>
+<p><a href="../../global/default.htm" style="white-space: nowrap;"><img src="../../common/images/globe_footer.gif" alt=" " width="20" height="20" align="middle" style="padding-right: 3px;">OCLC Worldwide</a>&nbsp;| <a href="../../careers/default.htm" style="white-space: nowrap;">Careers at OCLC</a>&nbsp;| <a href="http://www.oclc.org/common/cgi-oclc/arm.cgi/https://www3.oclc.org/app/contac/" target="_blank">Feedback</a>&nbsp;| <a href="default.htm" style="white-space: nowrap;">Privacy Policy</a>&nbsp;| <a href="../iso/default.htm" style="white-space: nowrap;">ISO 9001 Certificate</a><br>
+<a href="../copyright/default.htm" style="white-space: nowrap;">©2004 OCLC Online Computer Library Center</a></p>
 <p>OCLC &nbsp; 6565 Frantz Road, Dublin OH USA 43017-3395 &nbsp; <a href="mailto:oclc@oclc.org">oclc@oclc.org</a> &nbsp; 1-614-764-6000 &nbsp; USA 1-800-848-5878</p>
 
 </td>
