--- a/a/at/ato/atomz.com.html
+++ b/a/at/ato/atomz.com.html
@@ -1,24 +1,38 @@
-<!--The following is the downloaded HTML source of the atomz.com privacy policy that was archived on 2004-04-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040401211237id_/http%3A//www.atomz.com/company/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the atomz.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206181241id_/http%3A//atomz.com/company/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<!-- std_head_begin -->
 <title></title>
 <link rel="stylesheet" type="text/css" href="/css/low.css">
 <link rel="stylesheet" type="text/css" media="screen" href="/css/screen.css">
 
-<!-- hide
 <script type="text/javascript" src="/js/nav.js"></script>
--->
 
-<script type="text/javascript">
+<script language="javascript">
+//<!--
 
+// Preload navigation images
+if(document.images){
+	menu1img = new Image();menu1img.src = '/nav/solutions.gif';
+menu1imgOn = new Image();menu1imgOn.src = '/nav/solutions_on.gif';
+menu2img = new Image();menu2img.src = '/nav/applications.gif';
+menu2imgOn = new Image();menu2imgOn.src = '/nav/applications_on.gif';
+menu3img = new Image();menu3img.src = '/nav/services.gif';
+menu3imgOn = new Image();menu3imgOn.src = '/nav/services_on.gif';
+menu4img = new Image();menu4img.src = '/nav/customers.gif';
+menu4imgOn = new Image();menu4imgOn.src = '/nav/customers_on.gif';
+menu5img = new Image();menu5img.src = '/nav/news.gif';
+menu5imgOn = new Image();menu5imgOn.src = '/nav/news_on.gif';
+menu6img = new Image();menu6img.src = '/nav/company.gif';
+menu6imgOn = new Image();menu6imgOn.src = '/nav/company_on.gif';
+menu7img = new Image();menu7img.src = '/nav/contact.gif';
+menu7imgOn = new Image();menu7imgOn.src = '/nav/contact_on.gif';
 
-<!-- 
-/* preload_nav(); preload_home(); */
+}
 //-->
 </script>
-
 
 </head>
 
@@ -35,13 +49,13 @@
 </li>
 </ul>
 </div><div id="nav1">
-<ul><li><a href="/solutions/" id="i_solutions"><span>Solutions</span></a></li>
-<li><a href="/applications/" id="i_applications"><span>Applications</span></a></li>
-<li><a href="/services/" id="i_services"><span>Services</span></a></li>
-<li><a href="/customers/" id="i_customers"><span>Customers</span></a></li>
-<li><a href="/news/" id="i_news"><span>News</span></a></li>
-<li><a href="/company/" id="i_company_on"><span>Company</span></a></li>
-<li><a href="/contact/" id="i_contact"><span>Contact</span></a></li>
+<ul><li id="li_solutions"><a href="/solutions/" id="i_solutions" onmouseover="hideAllNavMenu(); dyn.showDiv( 'solutions_menu' )" onmouseout="dyn.hideDiv('solutions_menu');"><span>Solutions</span></a></li>
+<li id="li_applications"><a href="/applications/" id="i_applications" onmouseover="hideAllNavMenu(); dyn.showDiv( 'applications_menu' )" onmouseout="dyn.hideDiv('applications_menu');"><span>Applications</span></a></li>
+<li id="li_services"><a href="/services/" id="i_services" onmouseover="hideAllNavMenu(); dyn.showDiv( 'services_menu' )" onmouseout="dyn.hideDiv('services_menu');"><span>Services</span></a></li>
+<li id="li_customers"><a href="/customers/" id="i_customers" onmouseover="hideAllNavMenu(); dyn.showDiv( 'customers_menu' )" onmouseout="dyn.hideDiv('customers_menu');"><span>Customers</span></a></li>
+<li id="li_news"><a href="/news/" id="i_news" onmouseover="hideAllNavMenu(); dyn.showDiv( 'news_menu' )" onmouseout="dyn.hideDiv('news_menu');"><span>News</span></a></li>
+<li id="li_company"><a href="/company/" id="i_company_on" onmouseover="hideAllNavMenu(); dyn.showDiv( 'company_menu' )" onmouseout="dyn.hideDiv('company_menu');"><span>Company</span></a></li>
+<li id="li_contact"><a href="/contact/" id="i_contact" onmouseover="hideAllNavMenu(); dyn.showDiv( 'contact_menu' )" onmouseout="dyn.hideDiv('contact_menu');"><span>Contact</span></a></li>
 </ul>
 </div>
 <div id="columnleft">
@@ -76,7 +90,7 @@ for more information, pricing, and product demonstrations
 <h1>
 </h1>
 <span class="head1">
-<h1><span class="head1">Avivo Corporation, the creator of Atomz, is committed to honoring privacy rights.</span></h1></span>
+<h1><span class="head1">Atomz is committed to honoring privacy rights.</span></h1></span>
 <h2>The following discloses our information gathering and dissemination practices.</h2>
 <p>Our site's registration forms require&nbsp;customers and prospective customers&nbsp;(together called "customers")&nbsp;to give us contact information (like their name and email address). Periodically, we use the information you have provided on the registration form to send you updates about our products and promotional material provided to us by our partners. WE DO NOT SELL, TRADE, EXCHANGE OR OTHERWISE MAKE AVAILABLE ANY PERSONALLY IDENTIFIABLE INFORMATION TO ANY OTHER COMPANY OR ORGANIZATION. </p>
 <p>The customer information is also used to contact the customer periodically about the products and services for which the customer has signed up, as well as general information about Atomz. In these mailings, we may include offers from our partners, information about product upgrades and enhancements, as well as marketing promotions from Atomz. </p>
@@ -92,10 +106,14 @@ for more information, pricing, and product demonstrations
 <h2>Correct/Update </h2>
 <p>This site gives customers the ability to change and modify information previously provided. Please log into your account at <a href="/">http://www.atomz.com</a>&nbsp;to update your customer information.</p>
 <h2>Contacting Atomz about Privacy </h2>
-<p>Questions regarding our privacy policy should be directed to the Atomz site coordinator, at <a href="mailto:privacy@atomz.com">privacy@atomz.com</a>. You may also use this address to notify us that you do not wish to receive future mailings from Atomz.<br></p>
+<p>Questions regarding our privacy policy should be directed to the Atomz site coordinator through our <a href="../contact/form_privacy.htm">Feedback Form</a>. </p>
+<h2>Request Removal from Future Email Communications</h2>
+<p>To be removed from future email communications from Atomz, complete our "<a href="../contact/form_removeme.htm">Email Removal</a>" form.</p>
 
 
 </div>
+<div id="columnright">
+<div class="pre_sitepromo"> </div></div>
 <div id="footer">
 <p>
 <a href="/company/privacy.htm">Privacy Statement</a>  | <a href="/company/terms.htm">Terms of Use</a> Copyright © 1999-2004 Atomz Corporation. All rights reserved.
@@ -103,6 +121,7 @@ for more information, pricing, and product demonstrations
 </div>
 
 </div>
+
 
 <!-- BEGIN WEBSIDESTORY CODE v9.1.1 (11up) -->
 <!-- COPYRIGHT 1997-2003 WEBSIDESTORY, INC. ALL RIGHTS RESERVED. U.S.PATENT No. 6,393,479 B1. Privacy notice at: http://websidestory.com/privacy -->
@@ -150,9 +169,53 @@ navigator.appVersion)==4)document.write("<\!"+"--")</script><noscript>
 <img src="https://ehg-atomzinc.hitbox.com/HG?hc=we36&cd=1&hv=6&ce=u&hb=DM53041889EN96EN3&n=PUT+PAGE+NAME+HERE&vcon=CONTENT+CATEGORY&seg=&cmp=&gp=&fnl=&pec=&dcmp=&ra=&gn=&cv=&ld=&la=&c1=&c2=&c3=&c4=&vpc=090101rn" border="0" width="1" height="1">
 </noscript><!--//-->
 <!-- END WEBSIDESTORY CODE  -->
-
-
-
+<div id="solutions_menu" onmouseover="mOn('i_solutions');dyn.showDiv('solutions_menu');" onmouseout="mOff('i_solutions');dyn.hideDiv('solutions_menu');" style="left: 24px; top: 114px;">
+<a href="/solutions/">overview</a>
+<a href="/solutions/commerce/">atomz commerce</a>
+<a href="/solutions/media/">atomz media &amp; entertainment</a>
+<a href="/solutions/enterprise/">atomz enterprise</a>
+</div>
+<div id="applications_menu" onmouseover="mOn('i_applications');dyn.showDiv('applications_menu');" onmouseout="mOff('i_applications');dyn.hideDiv('applications_menu');" style="left: 24px; top: 128px;">
+<a href="/applications/">overview</a>
+<a href="/applications/search/">atomz search</a>
+<a href="/applications/publish/">atomz publish</a>
+<a href="/applications/promote/">atomz promote</a>
+<a href="/applications/connect/">atomz connect</a>
+</div>
+<div id="services_menu" onmouseover="mOn('i_services');dyn.showDiv('services_menu');" onmouseout="mOff('i_services');dyn.hideDiv('services_menu');" style="left: 24px; top: 142px;">
+<a href="/services/">overview</a>
+<a href="/services/implement.htm">product implementations</a>
+<a href="/services/training.htm">product training</a>
+<a href="/services/hosting.htm">site hosting</a>
+<a href="/services/analytics.htm">site analytics</a>
+<a href="/services/support.htm">customer support</a>
+<a href="/services/security.htm">security</a>
+<a href="/services/web.htm">web strategy &amp; design</a>
+</div>
+<div id="customers_menu" onmouseover="mOn('i_customers');dyn.showDiv('customers_menu');" onmouseout="mOff('i_customers');dyn.hideDiv('customers_menu');" style="left: 24px; top: 156px;">
+<a href="/customers/">overview</a>
+<a href="/customers/cust_list.htm">customer list</a>
+<a href="/customers/gallery/">customer gallery</a>
+<a href="/customers/case_studies.htm">case studies</a>
+</div>
+<div id="news_menu" onmouseover="mOn('i_news');dyn.showDiv('news_menu');" onmouseout="mOff('i_news');dyn.hideDiv('news_menu');" style="left: 24px; top: 170px;">
+<a href="/news/coverage/">news coverage</a>
+<a href="/news/releases/">press releases</a>
+<a href="/news/events/">events</a>
+<a href="/news/awards/">awards</a>
+<a href="/news/newsletter/">newsletter</a>
+</div>
+<div id="company_menu" onmouseover="mOn('li_company');dyn.showDiv('company_menu');" onmouseout="mOff('li_company');dyn.hideDiv('company_menu');" style="left: 24px; top: 184px;">
+<a href="/company/history.htm">company history</a>
+<a href="/company/management.htm">management team</a>
+<a href="/company/board.htm">board of directors</a>
+<a href="/company/investors.htm">investors</a>
+<a href="/company/partners/">partners</a>
+<a href="/company/careers.htm">careers</a>
+<a href="/contact/">contact us</a>
+</div>
+<div id="contact_menu" onmouseover="mOn('i_contact');dyn.showDiv('contact_menu');" onmouseout="mOff('i_contact');dyn.hideDiv('contact_menu');">
+</div>
 
 
 
