--- a/r/ry/ryd/ryder.com.html
+++ b/r/ry/ryd/ryder.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ryder.com privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605230026id_/http%3A//ryder.com/privacy_policy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ryder.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206181412id_/http%3A//www.ryder.com/privacy_policy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>Ryder.com &gt; Privacy Policy</title>
@@ -181,29 +181,33 @@ function MM_preloadImages() { //v3.0
 
 //-->
 </script>
+
 </tbody></table><table border="0" cellpadding="0" cellspacing="0" width="607">
 <!-- fwtable fwsrc="redbar.png" fwbase="redbar.gif" fwstyle="Dreamweaver" fwdocid = "742308039" fwnested="0" -->
   <tbody><tr>
-   <td><img src="spacer.gif" width="377" height="1" border="0" alt=""></td>
-   <td><img src="spacer.gif" width="57" height="1" border="0" alt=""></td>
+   <td><img src="spacer.gif" width="323" height="1" border="0" alt=""></td>
+   <td><img src="spacer.gif" width="61" height="1" border="0" alt=""></td>
    <td><img src="spacer.gif" width="65" height="1" border="0" alt=""></td>
-   <td><img src="spacer.gif" width="57" height="1" border="0" alt=""></td>
-   <td><img src="spacer.gif" width="51" height="1" border="0" alt=""></td>
+   <td><img src="spacer.gif" width="60" height="1" border="0" alt=""></td>
+   <td><img src="spacer.gif" width="42" height="1" border="0" alt=""></td>
+   <td><img src="spacer.gif" width="56" height="1" border="0" alt=""></td>
    <td><img src="spacer.gif" width="1" height="1" border="0" alt=""></td>
   </tr>
 
   <tr>
-   <td><img name="redbar_l" src="/images/redbar_l.gif" border="0" alt=""></td>
-
-   <td><a href="customer_profiles.shtml" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('cust_on','','/images/cust_on_f2.gif',1);"><img name="cust_on" src="../images/cust_on.gif" width="57" height="17" border="0" alt=""></a></td>
-
-   <td><a href="emp_portal.shtml" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('ee_on','','/images/ee_on_f2.gif',1);"><img name="ee_on" src="/images/ee_on.gif" width="65" height="17" border="0" alt=""></a></td>
-
-  <td><a href="http://phx.corporate-ir.net/phoenix.zhtml?c=108468&amp;p=irol-irhome" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('inv_off','','/images/inv_off_f2.gif',1);"><img name="inv_off" src="/images/inv_off.gif" width="57" height="17" border="0" alt=""></a></td>
-
- <td><a href="media_portal.shtml" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('media_on','','/images/media_on_f2.gif',1);"><img name="media_on" src="/images/media_on.gif" width="51" height="17" border="0" alt=""></a></td>
-
- <td><img src="images/spacer.gif" width="1" height="17" border="0" alt=""></td>
+   <td><img name="redbar_r1_c1" src="/images/redbar_l.gif" border="0" alt=""></td>
+   
+   <td><a href="customer_profiles.shtml" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('customer','','/images/customer_f2.gif',1);"><img name="customer" src="/images/customer.gif" width="61" height="17" border="0" alt=""></a></td>
+   
+   <td><a href="emp_portal.shtml" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('employee','','/images/employee_f2.gif',1);"><img name="employee" src="/images/employee.gif" width="65" height="17" border="0" alt=""></a></td>
+   
+   <td><a href="http://phx.corporate-ir.net/phoenix.zhtml?c=108468&amp;p=irol-irhome" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('investor','','/images/investor_f2.gif',1);"><img name="investor" src="/images/investor.gif" width="60" height="17" border="0" alt=""></a></td>
+   
+   <td><a href="media_portal.shtml" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('media','','/images/media_f2.gif',1);"><img name="media" src="/images/media.gif" width="42" height="17" border="0" alt=""></a></td>
+   
+   <td><a href="supplier_portal.shtml" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('supplier','','/images/supplier_f2.gif',1);"><img name="supplier" src="/images/supplier.gif" width="56" height="17" border="0" alt=""></a></td>
+   
+   <td><img src="images/spacer.gif" width="1" height="17" border="0" alt=""></td>
   </tr>
 </tbody></table>
 <!--END TOP NAV RED-->
@@ -229,7 +233,6 @@ function MM_preloadImages() { //v3.0
 
   <area shape="RECT" coords="0,86,120,98" href="/about_us.shtml" alt="" onmouseover="clearmenus();change('imgmenu2','about',1)" onmouseout="if(!isFour) clearmenus();">
 
-   <area shape="RECT" coords="0,98,120,110" href="/about_us.shtml" alt="" onmouseover="clearmenus();change('imgmenu2','about',1)" onmouseout="if(!isFour) clearmenus();">
   
 </map>
 
@@ -251,14 +254,12 @@ function MM_preloadImages() { //v3.0
 
   <area shape="RECT" coords="0,62,120,74" href="/index.shtml" alt="" onmouseover="clearmenus();change('imgmenu1','resources',1)" onmouseout="if(!isFour) clearmenus();">
 
-  <area shape="RECT" coords="0,74,120,86" href="/index.shtml" alt="" onmouseover="clearmenus();change('imgmenu1','resources',1)" onmouseout="if(!isFour) clearmenus();">
-
 </map>
 
 
 <!--the div below is only a place holder, but you need to keep it.-->
 
-<div id="menu0" style="position:absolute;left:472px;top:57px;visibility:hidden"><a href="#" onmouseout="clearmenus()"><img src="/images/about_menu.gif" width="120" height="122" border="0" alt="About Us"></a></div>
+<div id="menu0" style="position:absolute;left:472px;top:57px;visibility:hidden"><a href="#" onmouseout="clearmenus()"><img src="/images/about_menu.gif" width="120" height="110" border="0" alt="About Us"></a></div>
 
 <div id="menu0overs">
 
@@ -266,16 +267,13 @@ function MM_preloadImages() { //v3.0
 
 
 
-<div id="menu1"><a href="/index.shtml" onmouseout="clearmenus()"><img src="/images/resources_menu.gif" width="119" height="88" border="0" alt="Resources"></a></div>
+<div id="menu1"><a href="/index.shtml" onmouseout="clearmenus()"><img src="/images/resources_menu.gif" width="119" height="76" border="0" alt="Resources"></a></div>
 
 <div id="menu1overs">
 
 <a href="https://www.onlineinvoice.ryder.com/eipp/login/v_login.jsp" onmouseover="imagerep('oninv', 'menu1overs')" onmouseout="eraseimage('oninv', 'menu1overs')" class="menu"><img src="/images/misc_pixel.gif" alt="Online Invoice" border="0" height="14" hspace="0" name="oninv" vspace="0" width="119" class="menu"><br class="menu"></a>
 
 <a href="/ryderonline/rydership/splash" onmouseover="imagerep('matchcap', 'menu1overs')" onmouseout="eraseimage('matchcap', 'menu1overs')" class="menu"><img src="/images/misc_pixel.gif" alt="Match Capacity/Load" border="0" height="12" hspace="0" name="matchcap" vspace="0" width="119" class="menu"><br class="menu"></a>
-
-<a href="/ryderonline/ryderentry/splash?retype=status" onmouseover="imagerep('update', 'menu1overs')" onmouseout="eraseimage('update', 'menu1overs')" class="menu"><img src="/images/misc_pixel.gif" alt="Update Load Status" border="0" height="12" hspace="0" name="update" vspace="0" width="119" class="menu"><br class="menu"></a>
-
 
 <a href="/ryderonline/rydertrac/splash" onmouseover="imagerep('tt', 'menu1overs')" onmouseout="eraseimage('tt', 'menu1overs')" class="menu"><img src="/images/misc_pixel.gif" alt="Track &amp; Trace" border="0" height="12" hspace="0" name="tt" vspace="0" width="119" class="menu"><br class="menu"></a>
 
@@ -285,18 +283,31 @@ function MM_preloadImages() { //v3.0
 
 <a href="http://freightbill.ryder.com/fbrep/" onmouseover="imagerep('carrierpay', 'menu1overs')" onmouseout="eraseimage('carrierpay', 'menu1overs')" class="menu"><img src="/images/misc_pixel.gif" alt="Carrier Payment Status" border="0" height="12" hspace="0" name="carrierpay" vspace="0" width="119" class="menu"><br class="menu"></a>
 
+<!--<a href="http://168.218.69.176:7001/tm/framework/Frame.jsp"
+
+	ONMOUSEOVER="imagerep('tm', 'menu1overs')"
+
+	ONMOUSEOUT="eraseimage('tm', 'menu1overs')"
+
+	CLASS="menu"><IMG
+
+		SRC="/images/misc_pixel.gif"
+
+		ALT="Transportation Manager"
+
+		BORDER="0" HEIGHT="12" HSPACE="0" NAME="tm" VSPACE="0" WIDTH="119" CLASS="menu"><BR CLASS="menu"></A>-->
+
+
 
 </div>
 
 
 
-<div id="menu2"><a href="/about_us.shtml" onmouseout="clearmenus()"><img src="/images/about_menu.gif" width="120" height="122" border="0" alt="About Us"></a></div>
+<div id="menu2"><a href="/about_us.shtml" onmouseout="clearmenus()"><img src="/images/about_menu.gif" width="120" height="110" border="0" alt="About Us"></a></div>
 
 <div id="menu2overs">
 
-<a href="/about_us_co.shtml" onmouseover="imagerep('overview', 'menu2overs')" onmouseout="eraseimage('overview', 'menu2overs')" class="menu"><img src="/images/misc_pixel.gif" alt="Company Overview" border="0" height="14" hspace="0" name="overview" vspace="0" width="120" class="menu"><br class="menu"></a>
-
-<a href="/about_us_h.shtml" onmouseover="imagerep('history', 'menu2overs')" onmouseout="eraseimage('history', 'menu2overs')" class="menu"><img src="/images/misc_pixel.gif" alt="History" border="0" height="12" hspace="0" name="history" vspace="0" width="120" class="menu"><br class="menu"></a>
+<a href="/about_us_h.shtml" onmouseover="imagerep('history', 'menu2overs')" onmouseout="eraseimage('history', 'menu2overs')" class="menu"><img src="/images/misc_pixel.gif" alt="History" border="0" height="14" hspace="0" name="history" vspace="0" width="120" class="menu"><br class="menu"></a>
 
 <a href="http://phx.corporate-ir.net/phoenix.zhtml?c=108468&amp;p=irol-irhome" onmouseover="imagerep('financial', 'menu2overs')" onmouseout="eraseimage('financial', 'menu2overs')" class="menu"><img src="/images/misc_pixel.gif" alt="Ryde Financial" border="0" height="12" hspace="0" name="financial" vspace="0" width="120" class="menu"><br class="menu"></a>
 
@@ -801,7 +812,7 @@ This policy is applicable to www.Ryder.com and other sites on the World Wide Web
 <tbody><tr>
 	<td align="left">
 	Ryder and Ryder Logo are registered trademarks of Ryder System, Inc.<br>
-	Copyright (c) 1996 - 2004 Ryder System, Inc.  Please read our Online <a href="/privacy_policy.shtml">Privacy Policy</a><br><br>
+	Copyright (c) 1996 - 2004 Ryder System, Inc.  Please read our Online <a href="/privacy_policy.shtml">Privacy Policy</a>&nbsp; <a href="/site_map.shtml">Site Map</a><br><br>
 	</td>
 
 </tr>
