valuemags.com (archived on 2004-12-06)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;shopping",
  "char_count": 2614,
  "classifier_probability": 0.91,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.56,
  "homepage_snapshot_redirected_domain": "valuemags.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040923040650id_/http://www.valuemags.com/home/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040925080800id_/http%3A//valuemags.com",
  "interval": "2004_B",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "valuemags.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041206182200id_/http%3A//www.valuemags.com/home/privacy.asp",
  "policy_title": "Privacy Policy",
  "policy_url": "valuemags.com/home/privacy.asp",
  "sha1": "a48206ffdbcdb9f2869cc837eb9130b7ef271836",
  "simhash": 13609514655750872459,
  "simhash_updated": true,
  "site_hostname": "valuemags.com",
  "site_url": "http://valuemags.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20041206182200",
  "word_count": 410,
  "year": 2004
}

--- a/v/va/val/valuemags.com.html
+++ b/v/va/val/valuemags.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the valuemags.com privacy policy that was archived on 2004-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040602222837id_/http%3A//www.valuemags.com/home/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the valuemags.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206182200id_/http%3A//www.valuemags.com/home/privacy.asp) for the most accurate reproduction.-->
 
 <html><head><script language="JavaScript"> 
 <!-- 
@@ -159,8 +159,8 @@ window.name = 'opener';
             site provides users the opportunity to opt-out of receiving promotional/marketing 
             information from our partners, and us . </font> 
             <p align="left"> <font face="Verdana, Arial, Helvetica, sans-serif" size="2">You 
-              can send email to <a href="mailto:customerservice@valuemags.com"> 
-              customerservice@valuemags.com</a> </font></p>
+              can send email to <a href="mailto:support@valuemags.com"> 
+              support@valuemags.com</a> </font></p>
           </div>
           <div class="section" id="data" align="left"> <font face="Verdana, Arial, Helvetica, sans-serif" size="2"> 
             <b>Data Quality/Access</b><br>
@@ -169,8 +169,8 @@ window.name = 'opener';
             information previously provided:<br>
             <br>
             </font><font face="Verdana, Arial, Helvetica, sans-serif" size="2">You 
-            can send email to <a href="mailto:customerservice@valuemags.com"> 
-            customerservice@valuemags.com</a> </font> </div>
+            can send email to <a href="mailto:support@valuemags.com"> 
+            support@valuemags.com</a> </font> </div>
           <div align="left"><font face="Verdana, Arial, Helvetica, sans-serif" size="2"> 
             <b><br>
             Contacting the Web Site </b></font> </div>
@@ -180,7 +180,7 @@ window.name = 'opener';
             <br>
             </font> 
           </p><div align="left">
-            <address> <font face="Verdana, Arial, Helvetica, sans-serif" size="2"><a href="mailto:info@valuemags.com">info@valuemags.com</a> </font></address>
+            <address> <font face="Verdana, Arial, Helvetica, sans-serif" size="2"><a href="mailto:support@valuemags.com">support@valuemags.com</a> </font></address>
           </div>
           <p align="left"></p>
           <div align="left"><font face="Verdana, Arial, Helvetica, sans-serif" size="2"><!--  End of Privacy Statement 
