--- a/b/bl/blo/bloglines.com.html
+++ b/b/bl/blo/bloglines.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the bloglines.com privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605041852id_/http%3A//www.bloglines.com/about/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bloglines.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206183207id_/http%3A//www.bloglines.com/about/privacy) for the most accurate reproduction.-->
 
-<html><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 <title>Bloglines | Privacy Policy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="http://www.bloglines.com/rss/about/news">
@@ -9,233 +9,216 @@
 <link rel="alternate" type="application/rss+xml" title="RSS" href="http://www.bloglines.com/rss/toplinks">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="http://www.bloglines.com/rss/toplinks_dec">
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-<style>
-   BODY {background-color: white}
-   body, div, p, th, td, li, dd, code, tt {
-       font-size: 8pt; 
-              font-family: verdana,helvetica; 
-	   white-space:wrap;}
-   h2 {
-       font-size: 14px;
-       margin: 0;
-       color: 1393C0;
-   }
-   .blogtitle {
-     font-size: 14px;
-   }
+<meta name="keywords" content="rss,atom,newsreader,feed,aggregator,syndication">
+<style type="text/css" media="all">
+@import "/css/08022004.css";
+body {
+  background:#fff;
+  margin: 0;
+  padding:0;
+  color:#000;
+  font:x-small/1.5em Verdana, Arial, Helvetica, sans-serif;
+  voice-family: "\"}\""; voice-family:inherit;
+  font-size: 69%;
+  }
 </style>
 </head>
-<body bgcolor="FFFFFF" text="#000000" link="#000000" vlink="#000000" alink="#000000">
-
-<a href="/" target="_top"><img src="/images/bloglines_logo.gif" width="202" height="53" border="0" alt="Bloglines"></a><br>
-
-<table width="98%" border="0" cellspacing="0" cellpadding="0" align="center">
-  <tbody><tr> 
-<td background="/images/nav_bar.gif" align="left" valign="top">
-<img src="/images/nav_bar_left.gif" width="3" height="22"></td>
-    <td background="/images/nav_bar.gif" align="left" valign="top">
-<a href="/" target="_top"><img src="/images/home_up.gif" width="54" height="22" border="0"></a><a href="/myblogs" target="_top"><img src="/images/my_blogs_up.gif" width="105" height="22" border="0"></a><a href="/help/" target="_top"><img src="/images/help_up.gif" width="54" height="22" border="0"></a>
-    </td>
-    <td background="/images/nav_bar.gif" align="right" valign="middle">
-
-
-Hello, Guest |
-<a href="/register" target="_top"><b>Register</b></a> |
-<a href="/login" target="_top"><b>Log In</b></a>
-&nbsp;
-
-
-&nbsp; &nbsp;</td>
-<td background="/images/nav_bar.gif" align="right" valign="top">
-<img src="/images/nav_bar_right.gif" width="3" height="22"></td>
-  </tr>
-</tbody></table>
-<p>
-
+<body>
+<script type="text/javascript">
+if( top.frames.length == 0 ) {
+  document.write( "<table width=\"100%\" border=\"0\" cellspacing=\"0\" cellpadding=\"0\"><tr><td align=\"left\">" );
+  document.write("<a href=\"/\"><img src=\"/images/blogo225x50.gif\" width=\"225\" height=\"50\" border=\"0\" /></a></td><td valign=\"top\" width=\"100%\">");
+}
+function doSearch()
+{
+  var r = document.sform.r.value;
+  var q = document.sform.q.value;
+  if( r == 2 )
+  document.location.href = "/sub/" + q;
+  else if( r == 3 )
+  document.location.href = "http://www.google.com/search?hl=en&ie-UTF-8&q=" + escape(q);
+  else
+  document.location.href = "/search?t=1&r=" + r + "&q=" + escape(q);
+}
+</script><table width="100%" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td align="left"><a href="/"><img src="/images/blogo225x50.gif" width="225" height="50" border="0"></a></td><td valign="top" width="100%">
+<div class="header-content">
+  <div class="logbar">
+  <table width="100%" border="0" cellspacing="3" cellpadding="0">
+  <tbody><tr><td align="left">
+Welcome Guest</td><td align="right">
+<a href="/register" target="_top">Register</a> |
+<a id="out" href="/help/faq">Help</a> |
+<a href="/login" target="_top">Log In</a>
+</td></tr>
+  </tbody></table>
+  </div>
+  <div class="searchbar" align="right">
+  <form name="sform" action="javascript:doSearch()" method="get" style="margin-bottom:0; margin-top:0;">
+  <select name="r">
+  <option value="0">Search All Blogs</option>
+  <option value="1">Search My Subscriptions</option>
+  <option value="3">Search The Web</option>
+  <option value="2">Subscribe To URL</option>
+  </select>
+  <input type="text" name="q">
+  <input name="imageField" type="image" src="/images/gobtn.gif" class="goButton">
+  </form>
+  </div>
+</div>
+<script type="text/javascript">
+if( top.frames.length == 0 ) {
+  document.write( "</td></tr></table>" );
+}
+</script></td></tr></tbody></table>
+<div class="tabs">
+  <ul>
+<script type="text/javascript">
+if ( top.frames.length == 0 ) {
+  document.write("<li><a href=\"/myblogs\">My&nbsp;Feeds</a></li>");
+  document.write('<li><a href="/myblogs?mode=2">My&nbsp;Blog</a></li>');
+  document.write('<li><a href="/myblogs?mode=1">Clippings</a></li>');
+}
+</script><li><a href="/myblogs">My&nbsp;Feeds</a></li><li><a href="/myblogs?mode=2">My&nbsp;Blog</a></li><li><a href="/myblogs?mode=1">Clippings</a></li>
+  <li><a href="/dir">Directory</a></li>
+  <li><a href="/help/share">Share</a></li>
+  </ul>
+</div><div class="clear">&nbsp;</div>
 <table border="0" cellspacing="0" cellpadding="0" width="98%" align="center">
-<tbody><tr><td>
-
-
-<table width="100%" cellspacing="1" cellpadding="5" align="center">
-<tbody><tr bgcolor="#f1f1f1">
-<td><h2>
-
-&nbsp;<a href="/about/"><font color="#1393C0">About Bloglines</font></a>:&nbsp;
-Privacy Policy
-</h2></td>
-</tr>
-</tbody></table>
-
+<tbody><tr><td><p>
+</p><div class="breadcrumb"><a href="/">Home</a> &gt;
+<a href="/about/">About Bloglines</a> &gt;
+<span class="blblue">Privacy Policy</span></div>
 <p>
-<table width="90%" align="center">
+</p><table width="90%" align="center">
 <tbody><tr><td>
-
-We take your privacy concerns regarding our products and services 
-seriously, so we have created the following Privacy Policy to explain 
-our information collection and use practices.  Our Privacy Policy 
-covers what information we collect through our products and services,
+<h2>Privacy Policy</h2>
+At Bloglines, we take your privacy concerns regarding our service
+seriously, so we have created the following Privacy Policy to explain
+our information collection and use practices. Our Privacy Policy
+covers what information we collect through our service,
 how we use this information, how you may opt-out of this collection,
 the security measures we take to protect this information, and
-our policy regarding children under 13 years of age.  By using
-our products and services, you consent and agree to the information
+our policy regarding children under 13 years of age. By using
+our service, you consent and agree to the information
 collection and use practices described in our Privacy Policy.
-We may periodically make changes to our Privacy Policy.  It
+We may periodically make changes to our Privacy Policy. It
 is your responsibility to review the most recent version of our
 Privacy Policy frequently and remain informed about any changes
-to it.  
-<p>
+to it.
+<p><br>
 The most recent version of our Privacy Policy can always be found at:
 </p><p>
 </p><ul>
 <a href="http://www.bloglines.com"><b>http://www.bloglines.com/</b></a>
 </ul>
-<p>
-
-</p><h2>What Information Is Collected?</h2><p>
-        We may collect information from you through our website,
+<h2>What Information Is Collected?</h2><p>
+  We may collect information from you through our website,
 when you download our products, and when you purchase or register
-for our products and services.  Below are the specific details
+for our service. Below are the specific details
 on what, where, when, and why this information is collected and
 how it is used.
 </p><p>
 </p><h2>Registration</h2><p>
-
-        The term "personally identifiable information" means
+  The term "personally identifiable information" means
 any information that may be used to identify you, including,
 but not limited to, your name, address, email address, Internet
 Protocol address, phone number, billing information, or other
-contact information.  You may be asked for certain personally
+contact information. You may be asked for certain personally
 identifiable information when registering for or accessing a
-particular product or service.  We do not share this information
+particular product or service. We do not share this information
 with any third parties.
 </p><p>
-</p><h2>When Purchasing Bloglines Products and Services</h2><p>
-
-        When you purchase a Bloglines product or service from us,
-we collect standard payment information, including your credit
-card number and billing address.  We use this information to
-process your purchase of our product or service.  We do not share
-this payment information with any other companies or third parties.
- We use Secure Sockets Layer encrypted connections to transmit
-your payment information, including your credit card number.
- We store your payment information in encrypted form and we limit
-the employees that can access this information.  In addition,
-we require that all of our employees and contractors adhere to
-a confidentiality policy.
-</p><p>
 </p><h2>Bloglines Database</h2><p>
-
-        Bloglines is used to subscribe to RSS feeds. We store this
+  Bloglines is used to subscribe to news feeds. We store this
 subscription information in our database. We use this information
 in aggregate to generate statistics and other usage information. We
 share this information with you, other end users, and other third
 parties.
 </p><p>
 </p><h2>Cookies</h2><p>
-
-        Cookies are small text files stored by your browser on
-your computer when you visit a website.  We use cookies to improve
-our website and make it easier to use.  Cookies permit us to
+  Cookies are small text files stored by your browser on
+your computer when you visit a website. We use cookies to improve
+our website and make it easier to use. Cookies permit us to
 recognize you and avoid repetitive requests for the same information.
  Most browsers will accept cookies until you change your browser
-settings to refuse them.  You may change your browser?s settings
-to refuse our cookies.  However, if you do so, you may not be
-able access certain Bloglines products and services.
+settings to refuse them. You may change your browser's settings
+to refuse our cookies. However, if you do so, you may not be
+able access certain Bloglines service.
 </p><p>
 </p><h2>Use of Contractors</h2><p>
-
-       We may retain the services of outside contractors to perform
+  We may retain the service of outside contractors to perform
 services on our behalf (for example, to help provide technical
-support services or deliver new products or services).  At times,
+support services or deliver new products or services). At times,
 we must disclose relevant personally identifiable information
 about you to our contractors so they may provide these specific
-services for us.  We require our contractors to keep this information
+services for us. We require our contractors to keep this information
 confidential and to only use the information on our behalf.
 </p><p>
 </p><h2>Email Communications</h2><p>
-
-        Periodically, we may send email to you if you have indicated
+  Periodically, we may send email to you if you have indicated
 a preference to receive news, updates, special offers, and other
-information relating to our products and services.  You may unsubscribe
+information relating to our service. You may unsubscribe
 from these email subscriptions at the profile web page for your
 account on our website.
 </p><p>
 </p><h2>Updating Your Information</h2><p>
-
-        If you desire to change or modify any of the information
+  If you desire to change or modify any of the information
 that you have previously provided to us, you may do so at the
-profile web page for your account on our website. 
+Account web page for your account on our website.
 </p><p>
 </p><h2>Children</h2><p>
-
-       Our products and services are intended solely for person
-13 years of age and older.  If you are under the age of 13 you
-may not access or use any of our products or services.  By using
-our products and services you represent and warrant to us that
+  Our service are intended solely for persons
+13 years of age and older. If you are under the age of 13 you
+may not access or use our service. By using
+our service you represent and warrant to us that
 you are 13 years of age or older.
 </p><p>
-
 </p><h2>Links to Third Party Web Sites</h2><p>
-
-        Our products and services may contain links to other
-websites and software.  We are not responsible for the privacy
-practices or the content of these websites or software.  Please
+  Our service may contain links to other
+websites and software. We are not responsible for the privacy
+practices or the content of these websites or software. Please
 visit the privacy policies of these third party sites in order
-to understand their privacy and information collection practices.
+o understand their privacy and information collection practices.
 </p><p>
 </p><h2>Disclosures Required by Law</h2><p>
-
-        We reserve the right to disclose your personally identifiable
+  We reserve the right to disclose your personally identifiable
 information when we believe in good faith that an applicable
 law, regulation, or legal process requires it, or when we believe
 disclosure is necessary to protect or enforce our rights or the
-rights of another user. 
+rights of another user.
 </p><p>
 </p><h2>Mergers and Acquisitions</h2><p>
-
-        In the event that we or a portion of our assets are acquired
+  In the event that we or a portion of our assets are acquired
 by another company, customer information, including personally
-identifiable information, may be one of the transferred assets. 
+identifiable information, may be one of the transferred assets.
 </p><p>
 </p><h2>No Error-Free Performance</h2><p>
-
-        We do not guarantee error-free performance under this
-Privacy Policy.  We may not always catch an unintended privacy
-issue, despite our efforts to do so.  Accordingly, we welcome
+  We do not guarantee error-free performance under this
+Privacy Policy. We may not always catch an unintended privacy
+issue, despite our efforts to do so. Accordingly, we welcome
 your feedback regarding any privacy concerns that you may have,
-including how we can improve our products and services generally.
+including how we can improve our service generally.
  We will use reasonable efforts to comply with this Privacy Policy
 and will take prompt corrective action when we learn of any failure
-to comply with it.  We will not be liable for any damages, including
+to comply with it. We will not be liable for any damages, including
 incidental, consequential, or punitive damages, relating to the
 practices described in this Privacy Policy.
-
-
 </p></td></tr></tbody></table>
-
-	  </p></td>
-          </tr>
-        </tbody></table>
-<table width="95%" align="center" valign="bottom">
-  <tbody><tr> 
-    <td>
-      <div align="center"><br>
-<a href="/about/">About Bloglines</a>
-| <a href="/about/notifier">Download Notifier</a> 
-| <a href="/help/easysub">Easy Subscribe</a> 
-| <a href="/contact">Contact Us</a><br>
-<a href="/about/privacy">Privacy Policy</a> 
-| <a href="/about/tos">Terms of Service</a><br>
-<small>
-Copyright © 2003 Trustic, Inc. All rights reserved.</small></div>
-    </td>
+	 </td>
   </tr>
-</tbody></table>
-</p><p>&nbsp;</p>
+  </tbody></table>
+<p><br>
+</p><div class="homefooter" align="center"><a href="/" target="_top">Home</a> |
+<a href="/about/" target="_top">About</a> |
+<a href="/help/faq" target="_top">Help</a> |
+<a href="/help/languages" target="_top">Languages</a> |
+<a href="/services/" target="_top">Services</a> |
+<a href="/about/privacy" target="_top">Privacy Policy</a> |
+<a href="/about/tos" target="_top">Terms of Service</a> |
+<a href="/about/advertise" target="_top">Advertise Here</a> |
+<a href="/contact" target="_top">Contact Us</a><br>
+Copyright © 2003-2004 Trustic, Inc. All rights reserved.</div>
 
 
-
-
-
-<!-- 0.002:0 -->
+<!-- 0.004:0 -->
 </body></html>
