--- a/p/pi/pit/pitchfork.com.html
+++ b/p/pi/pit/pitchfork.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pitchfork.com privacy policy that was archived on 2004-06-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040610044744id_/http%3A//www.pitchfork.com/privacypolicy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pitchfork.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206185115id_/http%3A//pitchfork.com/privacypolicy.htm) for the most accurate reproduction.-->
 
 <html><head>
 
