fxsound.com (archived on 2004-12-06)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 7341,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.06,
  "homepage_snapshot_redirected_domain": "fxsound.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040929012349id_/http://www.fxsound.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040929012349id_/http%3A//fxsound.com",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "fxsound.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041206190534id_/http%3A//www.fxsound.com/global/pages/legal/privacy.php%3Fvendor%3D0%26subvendor%3D0%26plus%3D0",
  "policy_title": "www.fxsound.com - FXSOUND Privacy Statement",
  "policy_url": "fxsound.com/global/pages/legal/privacy.php?vendor=0&subvendor=0&plus=0",
  "sha1": "ba135b735f11d2395260fc7c0b01d883181a4085",
  "simhash": 6180262923922750329,
  "simhash_updated": false,
  "site_hostname": "fxsound.com",
  "site_url": "http://fxsound.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20041206190534",
  "word_count": 1176,
  "year": 2004
}

--- a/f/fx/fxs/fxsound.com.html
+++ b/f/fx/fxs/fxsound.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the fxsound.com privacy policy that was archived on 2004-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040606161152id_/http%3A//www.fxsound.com/global/pages/legal/privacy.php%3Fvendor%3D0%26subvendor%3D0%26plus%3D0) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fxsound.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206190534id_/http%3A//www.fxsound.com/global/pages/legal/privacy.php%3Fvendor%3D0%26subvendor%3D0%26plus%3D0) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -18,11 +18,12 @@
 <body background="http://www.fxsound.com/global/graphics/bg001.gif" topmargin="0" marginheight="0" leftmargin="0" marginwidth="0">
 <table summary="logo and menu" width="100%" border="0" cellpadding="0" cellspacing="0" background="http://www.fxsound.com/global/graphics/bg002.gif">
 <tbody><tr>
-<td width="100%">
-<table summary="" align="center" width="725" border="0" cellpadding="0" cellspacing="0">
+<td align="center" width="100%">
+<table summary="" border="0" cellpadding="0" cellspacing="0">
 <tbody><tr nowrap="">
 <td><a href="http://www.fxsound.com/index.php?vendor=0&amp;subvendor=0&amp;plus=0" name="top"><img src="http://www.fxsound.com/global/graphics/logofxsound001.gif" alt="FXSOUND Home" title="FXSOUND Home" border="0" width="164" height="51" hspace="5"></a></td>
-<td align="right" valign="bottom" width="100%" class="topmenu" style="padding: 5px" nowrap=""><a href="http://www.fxsound.com/index.php?vendor=0&amp;subvendor=0&amp;plus=0" class="topmenu">Products</a> | <a href="http://www.fxsound.com/global/pages/company/index.php?vendor=0&amp;subvendor=0&amp;plus=0" class="topmenu">Company</a> | <a href="http://www.fxsound.com/global/pages/legal/terms.php?vendor=0&amp;subvendor=0&amp;plus=0" class="topmenu">Terms</a> | <a href="http://www.fxsound.com/global/pages/legal/privacy.php?vendor=0&amp;subvendor=0&amp;plus=0" class="topmenu">Privacy</a>&nbsp; &nbsp;</td>
+<td align="right" valign="bottom" class="topmenu" nowrap=""><a href="http://www.fxsound.com/index.php?vendor=0&amp;subvendor=0&amp;plus=0" class="topmenu">Products</a> | <a href="http://www.fxsound.com/global/pages/company/index.php?vendor=0&amp;subvendor=0&amp;plus=0" class="topmenu">Company</a> | <a href="http://www.fxsound.com/global/pages/legal/terms.php?vendor=0&amp;subvendor=0&amp;plus=0" class="topmenu">Terms</a> | <a href="http://www.fxsound.com/global/pages/legal/privacy.php?vendor=0&amp;subvendor=0&amp;plus=0" class="topmenu">Privacy</a><br>
+<img src="http://www.fxsound.com/global/graphics/spacer.gif" alt="" border="0" width="551" height="5"></td>
 </tr>
 </tbody></table>
 </td>
@@ -157,7 +158,8 @@ policies of those Web sites before providing them with any personal information.
 If you have any questions about this privacy statement, the practices of this Web site, or
 your dealings with this site, please contact us.<br>
 <br>
-<b>Email:</b> <a href="mailto:corporate@power-t.com?subject=Fxsound%20Corporate%20Info">corporate@power-t.com</a><br>
+<b>Email:</b> <a href="http://www.fxsound.com/global/pages/forms/ptSupport.php?vendor=0&amp;subvendor=0&amp;plus=0">click here to
+send us email</a><br>
 <br>
 <b>Mailing Address:</b><br>
 Power Technology<br>
