--- a/c/cb/cbe/cbeyond.net.html
+++ b/c/cb/cbe/cbeyond.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cbeyond.net privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605191645id_/http%3A//cbeyond.net/constants/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cbeyond.net privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206191355id_/http%3A//www.cbeyond.net/constants/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>Cbeyond - Privacy Policy</title>
@@ -11,6 +11,8 @@
 @import url(../includes/headers.css);
 </style>
 <link href="../includes/print.css" rel="stylesheet" type="text/css" media="print">
+<script src="/__utm.js" type="text/javascript"></script>
+
 </head>
 
 <body id="top">
