care2.com (archived on 2004-12-06)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 26724,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.26,
  "homepage_snapshot_redirected_domain": "care2.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20041001082132id_/http://www.care2.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20041001082132id_/http%3A//care2.com",
  "interval": "2004_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "care2.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041206194414id_/http%3A//www.care2.com/help/membership/privacy.html",
  "policy_title": "Care2 Help Center",
  "policy_url": "care2.com/help/membership/privacy.html",
  "sha1": "cb103e9722cebb85b264b5ec26933332a9094c39",
  "simhash": 16343062590371722525,
  "simhash_updated": false,
  "site_hostname": "care2.com",
  "site_url": "http://care2.com",
  "smog": 13.35,
  "strict_updated": false,
  "timestamp": "20041206194414",
  "word_count": 4272,
  "year": 2004
}

--- a/c/ca/car/care2.com.html
+++ b/c/ca/car/care2.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the care2.com privacy policy that was archived on 2004-06-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040618211518id_/http%3A//www.care2.com/help/membership/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the care2.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206194414id_/http%3A//www.care2.com/help/membership/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN"><html><head><title>Care2 Help Center</title>
 <meta name="keywords" content="environment, wildlife, nature, free, green, organic, earth, care-mail, caremail, care2, careto, caretoo, e-cards, ecards, vcards, greeting cards, eco, shopping, store, events, news, chat, frogs, endangered, lynx, reminder, recycle, panda, non-profit, donation, life, natural, search, donate, e-mail">
@@ -68,7 +68,7 @@ this matter, and how they pertain to you as you use our many offerings.
 <font size="2">The TRUSTe Trustmark</font>
 </b>
 <br>
-<a href="https://www.truste.org/validate/2289">
+<a href="http://www.truste.org/ivalidate.php?url=www.care2.com&amp;sealid=101">
 <img src="http://dingo.care-mail.com/art/misc/trusteclick.gif" align="right" height="73" width="91" border="0" hspace="5" vspace="5" alt="TRUSTe: Click to Verify"></a>
 Care2 is a TRUSTe program member in compliance 
 with TRUSTe privacy principles. TRUSTe is an independent, non-profit 
@@ -172,8 +172,7 @@ return book;
 <a href='javascript:find("21 127 379 379 257 228 91 4 33 109 228 91 230 364 6 109 228 33 441 364 6 257 318 466 21 127 191 115 33 6 91 464 67 109 228 33 441 280 67 127 21 91 257 318 33 228 280 42 127 379 379 257 228 91",527,343)' onmouseover="self.status=''; return true;" onmouseout="self.status=' '; return true;"><script>sleep("21 127 379 379 257 228 91 4 33 109 228 91 230 364 6 109 228 33 441 364 6 257 318",527,343)</script>support@earth.care2.com</a>. If Care2 has not responded to your inquiry 
        or your inquiry has not been satisfactorily addressed, please contact 
        TRUSTe. 
-<a href="http://www.truste.org/users/watchdog.html">
-http://www.truste.org/users/watchdog.html</a>
+<a href="http://www.truste.org/consumers/watchdog_complaint.php">http://www.truste.org/consumers/watchdog_complaint.php</a>
        
 <p>
 <b>
@@ -486,10 +485,15 @@ those 3rd party providers.
 <a href="http://www.care2.com/connect/">Care2 Connect:</a>
 </b>
 Care2 Connect (C2C) is an optional part of Care2 that facilitates new connections between members.  Care2 will be launching an enhanced version soon, so the following information covers not yet available, as well as currently available, systems.  C2C is accessible only among Care2 members who have personal profiles.  Your personal contact information such as your email address and street address will be kept hidden from the public, and made visible only to you and individuals you have indicated are your friends.   The C2C directory helps members locate their friends, and potential friends, by displaying first name, last name, city and other information on search results - but it does not include contact information per the aforementioned limitations. Contact can be initiated for "non-friends" by using an anonymous messaging system that will not reveal either party's address.  
-
+<br><br>
 When submitting a profile, you have the option of including information such as: your name, city, state, and country of residence, birthdate, gender, hobbies, interests, expertises, occupation, business, homepage url, email address, marital status, marital status, personal quote, photos, etc.  Remember: Because, much of this information will be publicly available, do NOT include confidential information.   Your personal friends network will be populated based on known relationships you have with other C2C members, as established through use of communications services on the Care2 system and as you specifically indicate while using C2C. Your friends network will be visible to other C2C users, and the privacy of each person is protected as described herein.
-
+<br><br>
+Care2 Connect members can elect to invite friends to join using an invitation template provided by Care2. Through the template, one e-mail invitation containing a unique url link is sent to each person whose email is
+entered by the sender. Care2 has a no-SPAM policy and thus will not collect or
+sell the e-mail addresses entered by Care2 Connect members.
+<br><br>
 Members can remove themselves from the C2C system at any time by adjusting their account settings via their <a href="http://www.care2.com/accounts/manageaccount.html">My Account Page</a>. Some changes may take up to 24 hours to appear on the site.
+
 <p>
 </p></li><li>
 <b>
@@ -934,7 +938,11 @@ Care2 Customer Support</a>
 Report Spam Abuse</a>
   </li>
 </ul>
-</font><p><font face="verdana,geneva,sans serif" size="1"> 
+</font><p><font face="verdana,geneva,sans serif" size="1">
+Care2.com, Inc.<br>
+275 Shoreline Drive, Suite 150<br>
+Redwood City, CA 94065<br>
+Phone: 650-622-0860<br>
 </font>
 <br><br>
 
